--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-opencv-python-headless
-camelot-py
-streamlit==1.22.0
-PyMuPDF
+pandas
+pdf2docx
+pdfplumber
+pillow
+pypdf[full]
+st-social-media-links
+streamlit-pdf-viewer
